--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -18,7 +18,8 @@
 #upload_rate = 0
 
 # Default directory to save the downloaded torrents.
-directory = ~/Downloads
+#directory = ~/Downloads
+directory = /storage
 
 # Default session directory. Make sure you don't run multiple instance
 # of rtorrent using the same session directory. Perhaps using a
@@ -27,7 +28,7 @@ session = /home/sauron/.rtorrent-session
 
 # Watch a directory for new torrents, and stop those that have been
 # deleted.
-#schedule = watch_directory,5,5,load_start=./watch/*.torrent
+#schedule = watch_directory,5,5,load_start=/storage/watch/*.torrent
 #schedule = untied_directory,5,5,stop_untied=
 
 # Close torrents when diskspace is low.
@@ -43,7 +44,7 @@ schedule = low_diskspace,5,60,close_low_diskspace=100M
 #bind = rakshasa.no
 
 # Port range to use for listening.
-port_range = 6790-6999
+port_range = 23877-23887
 
 # Start opening ports at a random position within the port range.
 #port_random = no
